--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 run:
 	python main.py localhost 80
 
-test:
+debug:
 	python main.py localhost 8080
 
 hsocket:
@@ -27,3 +27,15 @@ hjinja2:
 
 hurlparse:
 	python -c 'import urlparse; help(urlparse)'
+
+hsubprocess:
+	python -c 'import subprocess; help(subprocess)'
+
+hMySQLdb:
+	python -c 'import MySQLdb; help(MySQLdb)'
+
+hcursors:
+	python -c 'import MySQLdb; help(MySQLdb.cursors.DictCursors)'
+
+hep:
+	python -c 'help(BaseException)'
