--- a/src/srv/makefile
+++ b/src/srv/makefile
@@ -1,5 +1,5 @@
 INCS=-I.
-GCC_FLAGS=-std=gnu++11 -Wall -O2 -g $(INCS)
+GCC_FLAGS=-lc -std=gnu++11 -Wall -O2 -g $(INCS)
 GCC=g++ $(GCC_FLAGS)
 
 BIN=webserver.bin
