--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 INCS=-I.
-GCC_FLAGS=-lc -std=gnu++11 -Wall -O2 -g $(INCS)
+GCC_FLAGS=-std=gnu++11 -Wall -O2 -g $(INCS)
 GCC=g++ $(GCC_FLAGS)
 IP=$(shell ifconfig en0 inet | egrep '[0-9]+(\.[0-9]+)+' -o | head -n 1)
 
@@ -7,10 +7,13 @@ BIN=webserver.bin
 
 $(BIN): util.o main.o
 	$(GCC) -o $@ $^
+
+test_util: util.o test_util.cpp
+	$(GCC) -o $@ $^
  
 main.o: main.cpp
 
-util.o: util.cpp
+util.o: konst.h util.cpp
 
 clean:
 	rm -rf *.o *.bin *.dSYM
