--- a/src/makefile
+++ b/src/makefile
@@ -1,4 +1,4 @@
-INCS=-I.
+INCS=-I. -I../queue
 GCC_FLAGS=-std=gnu++11 -Wall -O2 -g $(INCS)
 GCC=g++ $(GCC_FLAGS)
 IP=$(shell ifconfig en0 inet | egrep '[0-9]+(\.[0-9]+)+' -o | head -n 1)
@@ -19,7 +19,7 @@ clean:
 	rm -rf *.o *.bin *.dSYM
 
 kill:
-	killall $(BIN) 
+	pkill $(BIN) 
 
 run:
 	./$(BIN) $(IP) 8080 1
